--- a/src/main/resources/MubanResources/localization/ZHS/relics.json
+++ b/src/main/resources/MubanResources/localization/ZHS/relics.json
@@ -1,9 +1,57 @@
 {
   "Muban:MyRelic": {
-    "NAME": "测试遗物",
-    "FLAVOR": "这个人很懒，什么都没写",
+    "NAME": "活体组织",
+    "FLAVOR": "由黑光病毒提取物制成的生物组织，渴求着鲜血",
     "DESCRIPTIONS": [
-      "每场战斗开始时，抽 #b1 张牌。"
+      "每次在战斗中失去生命时给1层 再生 。从获得遗物的时候开始计算，如果总计受到了 #y333 点或以上的伤害，那么 #y活体组织 替换为 #y再生组织 "
+    ]
+  }, "Muban:zaishengzuzhi": {
+    "NAME": "再生组织",
+    "FLAVOR": "由黑光病毒提取物制成的生物组织，渴求着鲜血",
+    "DESCRIPTIONS": [
+      "每次失去生命时给2层 再生 ，获得该遗物后，如果总计受到了 #y666 点伤害，那么替换为 #y适应性组织 "
+    ]
+  },"Muban:shiyingxingzuzhi": {
+    "NAME": "适应性组织",
+    "FLAVOR": "由黑光病毒提取物制成的生物组织，渴求着鲜血",
+    "DESCRIPTIONS": [
+      "每次失去生命时给2层 再生 ，获得该遗物后，如果总计受到了 #y666 点伤害，那么替换为 #y适应性组织 "
+    ]
+  },"Muban:chaoxuebilei": {
+    "NAME": "巢穴壁垒",
+    "FLAVOR": "由黑光病毒提取物制成的生物组织，渴求着鲜血",
+    "DESCRIPTIONS": [
+      "每次失去生命时给3层 再生 ，获得该遗物后开始计算，角色每造成 #y999 点伤害，那么给角色增添9点最大生命值"
+    ]
+  },"Muban:heiguangzhengji": {
+    "NAME": "黑光针剂",
+    "FLAVOR": "由黑光病毒提取物制成的生物组织，渴求着鲜血",
+    "DESCRIPTIONS": [
+      "每次失去生命时给3层 再生 ，获得该遗物后开始计算，角色每造成999点伤害，那么给角色增添9点最大生命值"
+    ]
+  },"Muban:heikui": {
+    "NAME": "黑盔",
+    "FLAVOR": "由黑光病毒提取物制成的生物组织，渴求着鲜血",
+    "DESCRIPTIONS": [
+      "每次失去生命时给3层 再生 ，获得该遗物后开始计算，角色每造成999点伤害，那么给角色增添9点最大生命值"
+    ]
+  },"Muban:hudun": {
+    "NAME": "护盾",
+    "FLAVOR": "由黑光病毒提取物制成的生物组织，渴求着鲜血",
+    "DESCRIPTIONS": [
+      "每次失去生命时给3层 再生 ，获得该遗物后开始计算，角色每造成999点伤害，那么给角色增添9点最大生命值"
+    ]
+  },"Muban:juanxu": {
+    "NAME": "卷须",
+    "FLAVOR": "由黑光病毒提取物制成的生物组织，渴求着鲜血",
+    "DESCRIPTIONS": [
+      "每次失去生命时给3层 再生 ，获得该遗物后开始计算，角色每造成999点伤害，那么给角色增添9点最大生命值"
+    ]
+  },"Muban:posuidezhengji": {
+    "NAME": "破碎的针剂",
+    "FLAVOR": "由黑光病毒提取物制成的生物组织，渴求着鲜血",
+    "DESCRIPTIONS": [
+      "每次失去生命时给3层 再生 ，获得该遗物后开始计算，角色每造成999点伤害，那么给角色增添9点最大生命值"
     ]
   }
 }
