--- a/src/main/resources/MubanResources/localization/ZHS/relics.json
+++ b/src/main/resources/MubanResources/localization/ZHS/relics.json
@@ -3,43 +3,43 @@
     "NAME": "活体组织",
     "FLAVOR": "由黑光病毒提取物制成的生物组织，渴求着鲜血",
     "DESCRIPTIONS": [
-      "每次在战斗中失去生命时给1层 再生 。从获得遗物的时候开始计算，如果总计受到了 #y333 点或以上的伤害，那么 #y活体组织 替换为 #y再生组织 "
+      "每次在战斗中失去生命时给1层 再生 。从获得遗物的时候开始计算，如果总计受到了 #y33 点或以上的伤害，那么 #y活体组织 替换为 #y再生组织 "
     ]
   }, "Muban:zaishengzuzhi": {
     "NAME": "再生组织",
     "FLAVOR": "由黑光病毒提取物制成的生物组织，渴求着鲜血",
     "DESCRIPTIONS": [
-      "每次失去生命时给2层 再生 ，获得该遗物后，如果总计受到了 #y666 点伤害，那么替换为 #y适应性组织 "
+      "每次失去生命时给2层 再生 ，获得该遗物后，如果总计受到了 #y66 点伤害，那么替换为 #y适应性组织 "
     ]
   },"Muban:shiyingxingzuzhi": {
     "NAME": "适应性组织",
     "FLAVOR": "由黑光病毒提取物制成的生物组织，渴求着鲜血",
     "DESCRIPTIONS": [
-      "每次失去生命时给2层 再生 ，获得该遗物后，如果总计受到了 #y666 点伤害，那么替换为 #y适应性组织 "
+      "每次失去生命时给2层 再生 ，获得该遗物后，如果总计受到了 #y99 点伤害，那么替换为 #y适应性组织 "
     ]
   },"Muban:chaoxuebilei": {
     "NAME": "巢穴壁垒",
-    "FLAVOR": "由黑光病毒提取物制成的生物组织，渴求着鲜血",
+    "FLAVOR": "从被感染的建筑上剥下的材料，坚固又不失柔韧",
     "DESCRIPTIONS": [
-      "每次失去生命时给3层 再生 ，获得该遗物后开始计算，角色每造成 #y999 点伤害，那么给角色增添9点最大生命值"
+      "效果1：每次打出能力牌时，获得该能力牌能耗3倍的格挡。效果2：战斗开始时根据角色已损失生命值获得敏捷（每损失30点生命值获得1点敏捷）效果3：每次格挡被打破时获得1点敏捷"
     ]
   },"Muban:heiguangzhengji": {
     "NAME": "黑光针剂",
-    "FLAVOR": "由黑光病毒提取物制成的生物组织，渴求着鲜血",
+    "FLAVOR": "病毒针剂里摇晃着不详的猩红，最好不要摔破它",
     "DESCRIPTIONS": [
-      "每次失去生命时给3层 再生 ，获得该遗物后开始计算，角色每造成999点伤害，那么给角色增添9点最大生命值"
+      "效果1： 每次出牌会给所有敌对单位施加2层中毒。效果2：每次出牌会扣除自己1点生命值。效果3：当有单位死去时，恢复死亡单位中毒层数一半的生命值。效果4：当拥有遗物后总计失去400点生命值时，“黑光针剂”将会被替换为“破碎的针剂”。"
     ]
   },"Muban:heikui": {
     "NAME": "黑盔",
-    "FLAVOR": "由黑光病毒提取物制成的生物组织，渴求着鲜血",
+    "FLAVOR": "生化组织在宿主身上构筑的坚硬盔甲，虽然沉重，但很有用",
     "DESCRIPTIONS": [
-      "每次失去生命时给3层 再生 ，获得该遗物后开始计算，角色每造成999点伤害，那么给角色增添9点最大生命值"
+      "战斗开始时减6敏捷，所受到的所有伤害降低一半"
     ]
   },"Muban:hudun": {
     "NAME": "护盾",
-    "FLAVOR": "由黑光病毒提取物制成的生物组织，渴求着鲜血",
+    "FLAVOR": "由生化能量凝聚出的护盾，令科学家震惊的材料",
     "DESCRIPTIONS": [
-      "每次失去生命时给3层 再生 ，获得该遗物后开始计算，角色每造成999点伤害，那么给角色增添9点最大生命值"
+      "效果1：每10回合获得1层缓冲.效果2：每次受到6次生命值伤害后获得1层缓冲"
     ]
   },"Muban:juanxu": {
     "NAME": "卷须",
@@ -49,9 +49,9 @@
     ]
   },"Muban:posuidezhengji": {
     "NAME": "破碎的针剂",
-    "FLAVOR": "由黑光病毒提取物制成的生物组织，渴求着鲜血",
+    "FLAVOR": "一切都晚了，病毒被释放出来了，与之伴随的还有绝望与死亡……",
     "DESCRIPTIONS": [
-      "每次失去生命时给3层 再生 ，获得该遗物后开始计算，角色每造成999点伤害，那么给角色增添9点最大生命值"
+      "效果1：每次出牌会给所有敌对单位施加3层中毒。\n效果2：每次出牌会扣除自己1点生命值2次（1x2）。\n效果3：当有单位死去时，角色恢复死亡单位中毒层数一半的生命值。\n效果4：每回合角色强制获得三层“黑光侵染”，所有敌方单位强制获得6层“黑光侵染”\n"
     ]
   }
 }
