--- a/src/main/resources/MubanResources/localization/ZHS/relics.json
+++ b/src/main/resources/MubanResources/localization/ZHS/relics.json
@@ -51,7 +51,7 @@
     "NAME": "破碎的针剂",
     "FLAVOR": "一切都晚了，病毒被释放出来了，与之伴随的还有绝望与死亡……",
     "DESCRIPTIONS": [
-      "效果1：每次出牌会给所有敌对单位施加3层中毒。\n效果2：每次出牌会扣除自己1点生命值2次（1x2）。\n效果3：当有单位死去时，角色恢复死亡单位中毒层数一半的生命值。\n效果4：每回合角色强制获得三层“黑光侵染”，所有敌方单位强制获得6层“黑光侵染”\n"
+      "效果1：每次出牌会给所有敌对单位施加3层中毒。效果2：每次出牌会扣除自己1点生命值2次（1x2）。效果3：当有单位死去时，角色恢复死亡单位中毒层数一半的生命值。效果4：每回合角色强制获得三层“黑光侵染”，所有敌方单位强制获得6层“黑光侵染”"
     ]
   }
 }
