--- a/src/main/resources/MubanResources/localization/ZHS/relics.json
+++ b/src/main/resources/MubanResources/localization/ZHS/relics.json
@@ -15,7 +15,7 @@
     "NAME": "适应性组织",
     "FLAVOR": "由黑光病毒提取物制成的生物组织，渴求着鲜血",
     "DESCRIPTIONS": [
-      "每次失去生命时给2层 再生 ，获得该遗物后，如果总计受到了 #y99 点伤害，那么替换为 #y适应性组织 "
+      "每次失去生命时给3层 再生 ，获得该遗物后， 斩杀 怪物时，获得1点最大生命值"
     ]
   },"Muban:chaoxuebilei": {
     "NAME": "巢穴壁垒",
@@ -39,13 +39,13 @@
     "NAME": "护盾",
     "FLAVOR": "由生化能量凝聚出的护盾，令科学家震惊的材料",
     "DESCRIPTIONS": [
-      "效果1：每10回合获得1层缓冲.效果2：每次受到6次生命值伤害后获得1层缓冲"
+      "效果1：每10回合获得1层缓冲.效果2：每次受到6次为被格挡的攻击伤害后获得1层缓冲"
     ]
   },"Muban:juanxu": {
     "NAME": "卷须",
-    "FLAVOR": "由黑光病毒提取物制成的生物组织，渴求着鲜血",
+    "FLAVOR": "从九头蛇身上拆下来的生物器官，依然具有活性",
     "DESCRIPTIONS": [
-      "每次失去生命时给3层 再生 ，获得该遗物后开始计算，角色每造成999点伤害，那么给角色增添9点最大生命值"
+      "每次攻击敌人时会给敌人施加“黑光侵染”的buff"
     ]
   },"Muban:posuidezhengji": {
     "NAME": "破碎的针剂",
