--- a/src/main/resources/MubanResources/localization/ZHS/powers.json
+++ b/src/main/resources/MubanResources/localization/ZHS/powers.json
@@ -15,5 +15,12 @@
     "每次受到 #y6 次生命值伤害后获得 #y1 层 缓冲 "
 
   ]
+},"Muban:zuzhizaisheng": {
+  "NAME": "组织再生",
+  "DESCRIPTIONS": [
+    "回合结束时,回复 ",
+    "点生命，并层数减少33%"
+
+  ]
 }
 }
