--- a/src/main/resources/MubanResources/localization/ZHS/relics.json
+++ b/src/main/resources/MubanResources/localization/ZHS/relics.json
@@ -3,19 +3,19 @@
     "NAME": "活体组织",
     "FLAVOR": "由黑光病毒提取物制成的生物组织，渴求着鲜血",
     "DESCRIPTIONS": [
-      "每次在战斗中失去生命时给1层 再生 。从获得遗物的时候开始计算，如果总计受到了 #y33 点或以上的伤害，那么 #y活体组织 替换为 #y再生组织 "
+      "每次在战斗中失去生命时给1层 #ymuban:组织再生 。从获得遗物的时候开始计算，如果总计受到了 #y33 点或以上的伤害，那么 #y活体组织 替换为 #y再生组织 "
     ]
   }, "Muban:zaishengzuzhi": {
     "NAME": "再生组织",
     "FLAVOR": "由黑光病毒提取物制成的生物组织，渴求着鲜血",
     "DESCRIPTIONS": [
-      "每次失去生命时给2层 再生 ，获得该遗物后，如果总计受到了 #y66 点伤害，那么替换为 #y适应性组织 "
+      "每次失去生命时给2层 #ymuban:组织再生 ，获得该遗物后，如果总计受到了 #y66 点伤害，那么替换为 #y适应性组织 "
     ]
   },"Muban:shiyingxingzuzhi": {
     "NAME": "适应性组织",
     "FLAVOR": "由黑光病毒提取物制成的生物组织，渴求着鲜血",
     "DESCRIPTIONS": [
-      "每次失去生命时给3层 再生 ，获得该遗物后， 斩杀 怪物时，获得1点最大生命值"
+      "每次失去生命时给3层 #ymuban:组织再生 ，获得该遗物后， 斩杀 怪物时，获得1点最大生命值"
     ]
   },"Muban:chaoxuebilei": {
     "NAME": "巢穴壁垒",
@@ -45,7 +45,7 @@
     "NAME": "卷须",
     "FLAVOR": "从九头蛇身上拆下来的生物器官，依然具有活性",
     "DESCRIPTIONS": [
-      "每次攻击敌人时会给敌人施加“黑光侵染”的buff"
+      "每次攻击敌人时会给敌人施加 3层 #ymuban:黑光侵染 "
     ]
   },"Muban:posuidezhengji": {
     "NAME": "破碎的针剂",
