--- a/src/main/resources/MubanResources/localization/ZHS/relics.json
+++ b/src/main/resources/MubanResources/localization/ZHS/relics.json
@@ -27,7 +27,7 @@
     "NAME": "黑光针剂",
     "FLAVOR": "病毒针剂里摇晃着不详的猩红，最好不要摔破它",
     "DESCRIPTIONS": [
-      "效果1： 每次出牌会给所有敌对单位施加2层中毒。效果2：每次出牌会扣除自己1点生命值。效果3：当有单位死去时，恢复死亡单位中毒层数一半的生命值。效果4：当拥有遗物后总计失去400点生命值时，“黑光针剂”将会被替换为“破碎的针剂”。"
+      "效果1： 每次出牌会给所有敌对单位施加2层中毒。效果2：当有单位死去时，恢复死亡单位中毒层数一半的生命值。效果3：当拥有遗物后总计失去100点生命值时，“黑光针剂”将会被替换为“破碎的针剂”。"
     ]
   },"Muban:heikui": {
     "NAME": "黑盔",
@@ -51,7 +51,7 @@
     "NAME": "破碎的针剂",
     "FLAVOR": "一切都晚了，病毒被释放出来了，与之伴随的还有绝望与死亡……",
     "DESCRIPTIONS": [
-      "效果1：每次出牌会给所有敌对单位施加3层中毒。效果2：每次出牌会扣除自己1点生命值2次（1x2）。效果3：当有单位死去时，角色恢复死亡单位中毒层数一半的生命值。效果4：每回合角色强制获得三层“黑光侵染”，所有敌方单位强制获得6层“黑光侵染”"
+      "效果1：每次出牌会给所有敌对单位施加3层中毒。。效果2：当有单位死去时，角色恢复死亡单位中毒层数一半的生命值。效果3：每回合角色强制获得3层“黑光侵染”，所有敌方单位强制获得6层“黑光侵染”"
     ]
   }
 }
