--- a/src/main/resources/MubanResources/localization/ZHS/relics.json
+++ b/src/main/resources/MubanResources/localization/ZHS/relics.json
@@ -15,7 +15,7 @@
     "NAME": "适应性组织",
     "FLAVOR": "由黑光病毒提取物制成的生物组织，渴求着鲜血",
     "DESCRIPTIONS": [
-      "每次失去生命时给3层 #ymuban:组织再生 ，获得该遗物后， 斩杀 怪物时，获得1点最大生命值"
+      "获取时，获得30点血量上限,每次失去生命时给3层 #ymuban:组织再生 ， 斩杀 怪物时，获得1点+该怪物1%最大生命值,受到伤害时，获得一层适应性"
     ]
   },"Muban:chaoxuebilei": {
     "NAME": "巢穴壁垒",
@@ -51,7 +51,7 @@
     "NAME": "破碎的针剂",
     "FLAVOR": "一切都晚了，病毒被释放出来了，与之伴随的还有绝望与死亡……",
     "DESCRIPTIONS": [
-      "效果1：每次出牌会给所有敌对单位施加3层中毒。。效果2：当有单位死去时，角色恢复死亡单位中毒层数一半的生命值。效果3：每回合角色强制获得3层“黑光侵染”，所有敌方单位强制获得6层“黑光侵染”"
+      "效果1：每次出牌会给所有敌对单位施加3层中毒。效果2：当有单位死去时，角色恢复死亡单位中毒层数一半的生命值。效果3：每回合角色强制获得3层“黑光侵染”，所有敌方单位强制获得6层“黑光侵染”"
     ]
   }
 }
