--- a/src/main/resources/MubanResources/localization/ZHS/powers.json
+++ b/src/main/resources/MubanResources/localization/ZHS/powers.json
@@ -19,7 +19,14 @@
   "NAME": "组织再生",
   "DESCRIPTIONS": [
     "回合结束时,回复 ",
-    "%的生命，并层数减少33%"
+    "%的已损失生命，并层数减少33%"
+
+  ]
+},"Muban:shiyingxing": {
+  "NAME": "适应性",
+  "DESCRIPTIONS": [
+    "受到的伤害减少 ",
+    "%(计算方法：层数/层数+10)"
 
   ]
 }
