--- a/src/main/resources/MubanResources/localization/ZHS/keywords.json
+++ b/src/main/resources/MubanResources/localization/ZHS/keywords.json
@@ -9,5 +9,10 @@
       "组织再生"
     ],
     "DESCRIPTION": "回合结束时，回复对应层数血量。并减少33%的层数"
-  }
+  },{
+  "NAMES": [
+    "适应性"
+  ],
+  "DESCRIPTION": "受到的伤害降低x/(x+10),x为层数，回合结束时降低10%"
+}
 ]
