--- a/src/main/resources/MubanResources/localization/ZHS/relics.json
+++ b/src/main/resources/MubanResources/localization/ZHS/relics.json
@@ -15,7 +15,7 @@
     "NAME": "适应性组织",
     "FLAVOR": "由黑光病毒提取物制成的生物组织，渴求着鲜血",
     "DESCRIPTIONS": [
-      "获取时，获得30点血量上限,每次失去生命时给3层 #ymuban:组织再生 ， 斩杀 怪物时，获得1点+该怪物1%最大生命值,受到伤害时，获得一层适应性"
+      "获取时，获得30点血量上限,每次失去生命时给(伤害量/3)层 #ymuban:组织再生 ， 斩杀 怪物时，获得1点+该怪物1%最大生命值,受到伤害时，获得(伤害量/10)层 #ymuban:适应性 "
     ]
   },"Muban:chaoxuebilei": {
     "NAME": "巢穴壁垒",
