--- a/src/main/resources/MubanResources/localization/ZHS/keywords.json
+++ b/src/main/resources/MubanResources/localization/ZHS/keywords.json
@@ -8,11 +8,11 @@
     "NAMES": [
       "组织再生"
     ],
-    "DESCRIPTION": "回合结束时，回复对应层数血量。并减少33%的层数"
+    "DESCRIPTION": "回合结束时，回复对应层数血量。并减少当前生命值10%的层数"
   },{
   "NAMES": [
     "适应性"
   ],
-  "DESCRIPTION": "受到的伤害降低x/(x+20),x为层数，回合结束时降低20%"
+  "DESCRIPTION": "受到的伤害降低x/(x+当前生命值/3),x为层数，回合结束时降低当前生命值5%的层数"
 }
 ]
