--- a/src/main/resources/MubanResources/localization/ZHS/relics.json
+++ b/src/main/resources/MubanResources/localization/ZHS/relics.json
@@ -15,7 +15,7 @@
     "NAME": "适应性组织",
     "FLAVOR": "由黑光病毒提取物制成的生物组织，渴求着鲜血",
     "DESCRIPTIONS": [
-      "每次失去生命时给(伤害量/3)层 #ymuban:组织再生 ， 斩杀 怪物时，获得1点+该怪物1%最大生命值,受到伤害时，获得(伤害量/5)层 #ymuban:适应性 "
+      "每次失去生命时给(伤害量/6)层 #ymuban:组织再生，斩杀 怪物时，获得该怪物6%最大生命值,受到伤害时，获得(伤害量/6)层 #ymuban:适应性 "
     ]
   },"Muban:chaoxuebilei": {
     "NAME": "巢穴壁垒",
@@ -52,6 +52,12 @@
     "FLAVOR": "一切都晚了，病毒被释放出来了，与之伴随的还有绝望与死亡……",
     "DESCRIPTIONS": [
       "效果1：每次出牌会给所有敌对单位施加3层中毒。效果2：当有单位死去时，角色恢复死亡单位中毒层数一半的生命值。效果3：每回合角色强制获得3层“黑光侵染”，所有敌方单位强制获得6层“黑光侵染”"
+    ]
+  },"Muban:fanmaiji": {
+    "NAME": "生物质贩卖机",
+    "FLAVOR": "哪怕是这种猩红蠕动的诡谲之物，也会有人愿意出高价收购",
+    "DESCRIPTIONS": [
+      "右键可以将当前最大生命值上限的10%换成等量的金币"
     ]
   }
 }
